--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:frederic.r.poissant@gmail.com">email</a></li>
+        		<li><a href="https://github.com/fredpoissant">github.com/fredpoissant</a></li>
 			</ul>
 		</footer>
 	</body>
