Modified folder setup

--- a/index.html
+++ b/index.html
@@ -2,28 +2,44 @@
 <html>
 	<head>
 		<title>Fred Poissant</title>
-		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+			 		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
+	        		<span class="sr-only">Toggle navigation</span>
+	        		<span class="icon-bar"></span>
+	       			<span class="icon-bar"></span>
+	        		<span class="icon-bar"></span>
+	      			</button>
+					<a href="#" class="navbar-brand"><span class="glyphicon glyphicon-picture"></span> FP</a>
+				</div>
+				<div class="collapse navbar-collapse" id="bs-nav-demo">
+				<ul class="nav navbar-nav">
+					<li><a href="/about">About</a></li>
+	        		<li><a href="docs/Frederic Poissant WD Resume">CV</a></li>
+	        		<li><a href="/blog">Blog</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="mailto:frederic.r.poissant@gmail.com"><span class="social social-gmail"></span>gmail</a></li>
+	        		<li><a href="https://github.com/fredpoissant"><span class="social social-github"></span></a></li>
+	        		<li><a href="https://www.linkedin.com/in/frederic-poissant/"><span class="social social-linked-in"></span></a></li>
+				</ul>
+				</div>	
+			</div>
+    	</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, I'm Fred Poissant!</h1>
+				<p>I'm a front end web developer and a machine learning and AI enthousiast. Feel free to browse my demo projects and resume, and please contact me if you have any questions or comment!</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:frederic.r.poissant@gmail.com">email</a></li>
-        		<li><a href="https://github.com/fredpoissant">github.com/fredpoissant</a></li>
-			</ul>
-		</footer>
+	
+	<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	</body>
 </html>
