Finished main page's frame

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Fred Poissant</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	</head>
 	<body>
 		<nav class="navbar navbar-inverse navbar-fixed-top">
@@ -16,7 +16,7 @@
 	       			<span class="icon-bar"></span>
 	        		<span class="icon-bar"></span>
 	      			</button>
-					<a href="#" class="navbar-brand"><span class="glyphicon glyphicon-picture"></span> FP</a>
+					<a href="#" class="navbar-brand">Fred Poissant</a>
 				</div>
 				<div class="collapse navbar-collapse" id="bs-nav-demo">
 				<ul class="nav navbar-nav">
@@ -25,15 +25,15 @@
 	        		<li><a href="/blog">Blog</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="mailto:frederic.r.poissant@gmail.com"><span class="social social-gmail"></span>gmail</a></li>
-	        		<li><a href="https://github.com/fredpoissant"><span class="social social-github"></span></a></li>
-	        		<li><a href="https://www.linkedin.com/in/frederic-poissant/"><span class="social social-linked-in"></span></a></li>
+					<li><a href="mailto:frederic.r.poissant@gmail.com"><i class="far fa-envelope"></i></a></li>
+	        		<li><a href="https://github.com/fredpoissant"><i class="fab fa-github"></i></a></li>
+	        		<li><a href="https://www.linkedin.com/in/frederic-poissant/"><i class="fab fa-linkedin"></i></a></li>
 				</ul>
 				</div>	
 			</div>
     	</nav>
 		<div class="container">
-    		<div class="blurb">
+    		<div class="jumbotron">
         		<h1>Hi there, I'm Fred Poissant!</h1>
 				<p>I'm a front end web developer and a machine learning and AI enthousiast. Feel free to browse my demo projects and resume, and please contact me if you have any questions or comment!</p>
     		</div><!-- /.blurb -->
