--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Cinzel:400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Oleo+Script" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,500,700" rel="stylesheet">
 	</head>
 	<body>
-		<nav class="navbar navbar-inverse navbar-fixed-top">
+		<nav id="navbar" class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
 			 		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
@@ -16,28 +19,62 @@
 	       			<span class="icon-bar"></span>
 	        		<span class="icon-bar"></span>
 	      			</button>
-					<a href="#" class="navbar-brand">Fred Poissant</a>
+					<a href="#banner" class="navbar-brand" id="navbar-content">Fred Poissant</a>
 				</div>
 				<div class="collapse navbar-collapse" id="bs-nav-demo">
 				<ul class="nav navbar-nav">
-					<li><a href="/about">About</a></li>
-	        		<li><a href="docs/Frederic Poissant WD Resume">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+					<li><a id="navbar-content" href="#about">About</a></li>
+					<li><a id="navbar-content" href="#services">Services</a></li>
+	        		<li><a id="navbar-content" href="#portfolio">Portfolio</a></li>
+	        		<li><a id="navbar-content" href="https://drive.google.com/open?id=1IDOKOiLEuA9O2F7q-2--XwkOrk39r-ys">Resume</a></li>
+	        		<li><a id="navbar-content" class="hireMe" href="#hireMe">Hire Me!</a></li>
+	        		
 				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="mailto:frederic.r.poissant@gmail.com"><i class="far fa-envelope"></i></a></li>
-	        		<li><a href="https://github.com/fredpoissant"><i class="fab fa-github"></i></a></li>
-	        		<li><a href="https://www.linkedin.com/in/frederic-poissant/"><i class="fab fa-linkedin"></i></a></li>
-				</ul>
+				
 				</div>	
 			</div>
     	</nav>
-		<div class="container">
-    		<div class="jumbotron">
-        		<h1>Hi there, I'm Fred Poissant!</h1>
-				<p>I'm a front end web developer and a machine learning and AI enthousiast. Feel free to browse my demo projects and resume, and please contact me if you have any questions or comment!</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+    	<section id="banner">
+    		<div class="container">
+    			<div class="jumbotron">
+    				<h1><img id="profile-pic" src="../fredpoissant/images/profile2.png"> Fred Poissant</h1>
+    				<h2>
+						I'm a front end web developer with a love for beautiful and original designs
+					</h2> 
+				</div>
+    		</div>
+    	</section>
+		<section id="about">
+			<div class="container">
+				<div class="row">
+					<div id="about-content" class="col-xs-12">
+						<h1 id="section-title">About me</h1>
+						<p>
+							Bacon ipsum dolor amet ex prosciutto meatball, proident sed fatback doner laborum magna. Fatback ea ham hock, sed porchetta fugiat jowl in in tail in capicola chuck tongue. Lorem hamburger pariatur kevin aute fugiat kielbasa excepteur cow meatball venison corned beef short loin nostrud. Frankfurter duis nulla fatback et, exercitation shank brisket chicken aliquip sed laborum leberkas. Porchetta adipisicing ut, sint et picanha consequat corned beef pork chop ground round ex. Duis alcatra ea deserunt. Cupim nisi adipisicing ea cupidatat turkey.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section id="services">
+			<div class="container">
+				<div class="row">
+					<div id="services-content" class="col-xs-12">
+						<h1 id="section-title">Services</h1>
+						<p>
+							Bacon ipsum dolor amet ex prosciutto meatball, proident sed fatback doner laborum magna. Fatback ea ham hock, sed porchetta fugiat jowl in in tail in capicola chuck tongue. Lorem hamburger pariatur kevin aute fugiat kielbasa excepteur cow meatball venison corned beef short
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="footer">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a id="navbar-content" href="mailto:frederic.r.poissant@gmail.com"><i class="far fa-envelope"></i></a></li>
+        		<li><a id="navbar-content" href="https://github.com/fredpoissant"><i class="fab fa-github"></i></a></li>
+        		<li><a id="navbar-content" href="https://www.linkedin.com/in/frederic-poissant/"><i class="fab fa-linkedin"></i></a></li>
+			</ul>
+		</section>
 	
 	<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
