fix broken link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     	<section id="banner">
     		<div class="container">
     			<div class="jumbotron">
-    				<h1><img id="profile-pic" src="../images/profile2.png"> Fred Poissant</h1>
+    				<h1><img id="profile-pic" src="fredpoissant.github.io/images/profile2.png"> Fred Poissant</h1>
     				<h2>
 						I'm a front end web developer with a love for beautiful and original designs
 					</h2> 
